--- a/src/styles.css
+++ b/src/styles.css
@@ -5,12 +5,22 @@ body {
 }
 
 .next-button:hover, .prev-button:hover, .pokemon:hover {
-	background-color: #2b2b2b;
+	background-color: #363636;
+}
+
+.next-button:active, .prev-button:active, .pokemon:active {
+	background-color: #2a2a2a;
 }
 
 .next-button, .prev-button, .pokemon {
 	color: white;
 	cursor: pointer;
+	text-align: center;
+	width: 100%
+}
+
+.pokemon-height-and-weight, .pokemon-image-and-name, .pokemon-abilities {
+	display: inline-block;
 	text-align: center;
 }
 
@@ -23,11 +33,12 @@ body {
 	align-items: center;
 	display: flex;
 	justify-content: center;
-	width: 100%;
 }
 
-.pokemon {
-	box-sizing: border-box;
-	display: block;
-	justify-content: center;
+.pokemon-height-and-weight {
+	width: 46%;
+}
+
+.pokemon-abilities {
+	width: 46%;
 }
